--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Vue</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="height: 100%;width: 100%;padding: 0;margin: 0"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
